--- a/package.json
+++ b/package.json
@@ -41,19 +41,23 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-google-maps/api": "^2.19.3",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.1.0",
     "embla-carousel-react": "^8.0.0-rc19",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.307.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-places-autocomplete": "^7.3.0",
     "react-resizable-panels": "^1.0.7",
     "react-router-dom": "^6.21.1",
